@@ -65,6 +65,59 @@
     </build>
     <profiles>
         <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>linux</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native.maven.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <imageName>libnative</imageName>
+                            <outputDirectory>${project.build.outputDirectory}/natives/linux_64</outputDirectory>
+                            <sharedLibrary>true</sharedLibrary>
+                            <buildArgs>
+                                 --enable-preview
+                                 --enable-http
+                                 --no-fallback
+                            </buildArgs>
+                            <verbose>false</verbose>
+                            <metadataRepository>
+                                <enabled>true</enabled>
+                            </metadataRepository>
+                            <classpath>
+                                <param>${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</param>
+                            </classpath>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.graalvm.buildtools</groupId>
+                                <artifactId>graalvm-reachability-metadata</artifactId>
+                                <version>${native.maven.plugin.version}</version>
+                                <classifier>repository</classifier>
+                                <type>zip</type>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>os-x</id>
             <activation>
                 <os>
